--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kickstart HTML CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=48&id=20909&format=png" type="image/x-icon">
+    <!-- <style>
+        h2{
+            color: rgb(5, 252, 5);
+        }
+    </style> -->
 </head>
 <body>
-    <h2>I am a New Programmer.</h2>
+    <div id="heading-parent">
+         <h2>I am a New Programmer.</h2>
+        <div class="btn-parent">
+             <button class="btn">Hire me Now</button>
+        </div>
+    </div>
 </body>
-</html>
+</html> 
 
 
 
